--- a/index.html
+++ b/index.html
@@ -92,20 +92,19 @@
   </audio>
 
   <div class="card">
-    <h1>Thamasha 💕<br>Will you be my Valentine?</h1>
+    <h1>Hey Unicorn💕<br>Will you be my Valentine?</h1>
 
     <button id="yesBtn" onclick="sayYes()">Yes 💖</button>
     <button id="noBtn" onclick="sayNo()">No 💔</button>
 
     <div id="message">
-      🦄💜 Yayyyyy Thamasha! 💜🦄  
+        🦄💜 Yayyyyy Babyyyyyy! 💜🦄  
       <br><br>
       You just made my whole universe brighter ✨  
       <br>
-      Every heartbeat, every smile —  
-      I want them all with you ❤️  
+      Every heartbeat, every smile, I want them all with you ❤️  
       <br><br>
-      Happy Valentine’s Day, my unicorn 🌸
+     Let's celebrate this year's Valentine’s Day together, my unicorn 🌸
     </div>
   </div>
 
